<resources>

    <string name="app_name">Wander Compass</string>
    <string name="start_walk">Start Tracking</string>
    <string name="start_scan">Scan</string>
    <string name="scanning">Scanning....</string>
    <string name="scan_failed">Error scanning</string>
    <string name="scan_finish">Scan successful</string>
    <string name="getting_gps_location">Getting GPS...</string>
    <string name="start_gps_tracking">Start GPS Tracking</string>
    <string name="stop_gps_tracking">Stop GPS Tracking</string>
    <string name="ble_standby">Bluetooth Standby</string>

    <string name="server_status">Server status</string>
    <string name="server_connected">Connected</string>
    <string name="server_disconnected">Disconnected</string>

</resources>
