<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Current Location"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/locationTv"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:textSize="16sp"
            android:textAlignment="textEnd"
            android:layout_weight="1"
            android:layout_marginStart="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Updates"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/locationUpdatesTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAlignment="textEnd"
            android:layout_weight="1"
            android:layout_marginStart="16dp"/>

    </LinearLayout>







        <Button
            android:id="@+id/locationBt"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@color/gpsButtonColor"
            android:text="@string/start_gps_tracking"
            android:padding="8dp"
            android:layout_marginTop="48dp"/>




        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separatorColor"
            android:layout_marginTop="80dp" />




    <TextView
        android:id="@+id/scanStatusTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textSize="18sp"
        android:hint="@string/ble_standby"
        android:textAlignment="center" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="40dp">


        <Button
            android:id="@+id/writeCharacteristicLeft"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="Left"
            android:enabled="false"/>

        <Button
            android:id="@+id/writeCharacteristicStraight"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="Straight"
            android:enabled="false"/>

        <Button
            android:id="@+id/writeCharacteristicRight"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="Right"
            android:enabled="false"/>

    </LinearLayout>


    <Button
        android:id="@+id/scanBt"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/bluetoothButtonColor"
        android:text="@string/start_scan"
        android:layout_marginTop="40dp"/>




    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separatorColor"
        android:layout_marginTop="80dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"

        android:padding="16dp"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_status"
        android:gravity="start"
        android:textSize="16sp"
        android:layout_marginTop="2dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/serverStatus"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:textSize="16sp"
        android:textAlignment="textEnd"
        android:layout_weight="1"
        android:hint="@string/server_disconnected"
        android:layout_marginStart="16dp"/>

    </LinearLayout>



</LinearLayout>